tests/baselines/reference/unicodeExtendedEscapesInStrings19(target=es5).errors.txt
unicodeExtendedEscapesInStrings19.ts(1,13): error TS1125: Hexadecimal digit expected.


==== unicodeExtendedEscapesInStrings19.ts (1 errors) ====
    var x = "\u{}";
                
!!! error TS1125: Hexadecimal digit expected.
    